# Vibe-HFT-Antigravity

./: .gitignore  ARCHITECTURE_DECISIONS.md  BROWSER_TEST_REPORT.md  BROWSER_TEST_RESULTS.md  CODE_REFACTORING_SUMMARY.md  Cargo.toml  GITHUB_SETUP_REPORT.md  LICENSE  PRD.md  PRD_PROGRESS_REPORT.md  README.md  REAL_DATA_REPORT.md  TEST_REPORT.md  UI_REDESIGN_DOCUMENTATION.md  UI_REPAIR_REPORT.md  WASM_IMPLEMENTATION_REPORT.md  build_error.txt  build_log.txt  package.json  root_agent.yaml
crates/algo/: Cargo.toml
crates/algo/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/market_data/: Cargo.toml
crates/market_data/src/: lib.rs  ofi.rs
crates/sbe_messages/: Cargo.toml  build.rs  schema.xml
crates/sbe_messages/src/: lib.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs
crates/wasm_client/: Cargo.toml
crates/wasm_client/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: LiquidationHeatmap.tsx  TradingChart.css  TradingChart.tsx
frontend/src/workers/: marketDataWorker.ts
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
