[workspace]
members = [
    "crates/core",
    "crates/sbe_messages",
    "crates/market_data",
    "crates/algo",
    "crates/wasm_client",
    "services/gateway",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
