[package]
name = "vibe-hft-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
vibe-hft-core = { path = "../../crates/core" }
vibe-hft-sbe-messages = { path = "../../crates/sbe_messages" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
anyhow = "1.0"
crossbeam-channel = "0.5"
